[package]
name = "rinha25"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = { version = "1.35.0", features = ["tokio-pg"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
deadpool-redis = "0.22.0"
